# perds

./: Cargo.toml  README.md
examples/: hydrate.rs
src/: lib.rs
test/: append.data  append.postcard  hydrate.postcard
