[package]
name = "perds"
authors = ["Ochir Erkhembayar"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.8", features = ["use-std"] }
serde = "1.0.193"
